--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,10 @@ script:
 - sudo apt-get install -y maven
 - mvn test
 deploy:
-  provider: script # NOT 'packagecloud'!
-  script: mvn deploy
+  provider: script
+  script:
+  - cp .travis.settings.xml $HOME/.m2/settings.xml
+  - mvn deploy
   skip_cleanup: true
   on:
     tags: true
