add maven-packagecloud-wagon and configure repository

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,27 @@
     <url>https://github.com/computology/jake-test-package</url>
   </scm>
 
+  <build>
+    <extensions>
+      <extension>
+        <groupId>io.packagecloud.maven.wagon</groupId>
+        <artifactId>maven-packagecloud-wagon</artifactId>
+        <version>0.0.4</version>
+      </extension>
+    </extensions>
+  </build>
+
+  <distributionManagement>
+    <repository>
+      <id>packagecloud-travis</id>
+      <url>packagecloud+https://packagecloud.io/capotej/java-test-package</url>
+    </repository>
+    <snapshotRepository>
+      <id>packagecloud-travis</id>
+      <url>packagecloud+https://packagecloud.io/capotej/java-test-package</url>
+    </snapshotRepository>
+  </distributionManagement>
+
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
