--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,7 @@ script:
 - mvn test
 deploy:
   provider: script
-  script:
-  - cp .travis.settings.xml $HOME/.m2/settings.xml
-  - mvn deploy
+  script: "cp .travis.settings.xml $HOME/.m2/settings.xml && mvn deploy"
   skip_cleanup: true
   on:
     tags: true
