--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,10 @@
 sudo: false
-language: C
+language: java
 services:
 - docker
 cache:
   directories:
   - "$HOME/.cache"
-script:
-- sudo apt-get install -y maven
-- mvn test
 deploy:
   provider: script
   script: "cp .travis.settings.xml $HOME/.m2/settings.xml && mvn deploy"
